[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rebuno"
version = "0.4.7"
description = "Python SDK for the Rebuno execution runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nathan Wong" },
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/rebuno/sdk-python"
Repository = "https://github.com/rebuno/sdk-python"
Documentation = "https://github.com/rebuno/rebuno/blob/main/docs/sdk/python.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "fastmcp>=2.0.0",
]
mcp = [
    "fastmcp>=2.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".workspace", ".venv", "docs"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
