[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rebuno"
version = "0.7.0"
description = "Python SDK for Rebuno"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nathan Wong" },
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
]

[project.urls]
Homepage = "https://github.com/rebuno/sdk-python"
Repository = "https://github.com/rebuno/sdk-python"
Documentation = "https://github.com/rebuno/rebuno/tree/main/docs/sdk/python"

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
